# abas-study-feedbacks

./: .env.example  .gitignore  README.md  docker-compose.yml  emotional.py  pyproject.toml  save_models.py  search.py  sentence_tokenizer.py
ai/: search.py
ai/aspect_classification/: __init__.py  embeds_sim_classifier.py  embeds_sim_classifier_test.py
ai/load_data/: load_aspects.py  load_aspects_test.py
ai/sentiaspect_evaluation/: __init__.py  aspect_rating.py  sentiaspect.py  sentiaspect_evaluator.py  sentiaspect_evaluator_test.py
ai/sentiaspect_evaluation/evaluation_strategies/: __init__.py  avg_evaluation_strategy.py  avg_evaluation_strategy_test.py
ai/sentiment_analysis/: __init__.py  hf_sentiment_analyzer.py  hf_sentiment_analyzer_test.py  sentiment.py
ai/text_segmentation/: __init__.py  sentence_segmentizer.py  sentence_segmentizer_test.py
backend/: dependencies.py  main.py  pyproject.toml  pytest.ini  routes.py
backend/domain/absa_analyser/: __init__.py  hf_absa_analyser.py
backend/domain/aspect_classification/: __init__.py  embeds_sim_classifier_test.py
backend/domain/combined_sentiaspect_evaluation/: __init__.py  combined_sentiaspect_evaluator.py
backend/domain/combined_sentiaspect_evaluation/evaluation_strategies/: __init__.py
backend/domain/load_data/: load_aspects_test.py
backend/domain/sentiaspect_evaluation/: __init__.py  sentiaspect.py  sentiaspect_evaluator.py  sentiaspect_evaluator_test.py
backend/domain/sentiaspect_evaluation/evaluation_strategies/: avg_evaluation_strategy.py  avg_evaluation_strategy_test.py
backend/domain/sentiment_analysis/: __init__.py  hf_sentiment_analyzer.py  hf_sentiment_analyzer_test.py
backend/domain/text_segmentation/: sentence_segmentizer_test.py
backend/infra/: settings.py
backend/infra/http/: dependencies.py  main.py  main_test.py  routes.py
backend/infra/load_data/: load_aspects.py  load_aspects_test.py
backend/infra/scripts/: save_models.py
backend/web/: main.py
docker/: docker-compose-otzyvus.yml  docker-compose-standalone.yml
docker/app/: Dockerfile-app
docker/backend/: Dockerfile-backend
docker/frontend/: Dockerfile-frontend  Dockerfile-frontend.dockerignore
docker/nginx/: default.conf
domain/sentiaspect_evaluation/: sentiaspect_evaluator.py  sentiaspect_evaluator_test.py
domain/sentiaspect_evaluation/evaluation_strategies/: avg_evaluation_strategy.py
domain/text_segmentation/: __init__.py  sentence_segmentizer.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  app.html  main.js
frontend/src/components/: SubmitButton.svelte  TextArea.svelte  TextInput.svelte
frontend/src/incs/: AspectsPicker.svelte  FeedbacksTextsInput.svelte
frontend/src/routes/: +page.svelte
frontend/src/utils/: api.js
infra/: settings.py
infra/http/: dependencies.py  routes.py
other_ai_research/emotional_finetuning/: Model choosing.ipynb  base.ipynb  dostoevsky.ipynb
other_ai_research/keytokens/: BERTscore
research/: pyproject.toml
research/other_ai_research/emotional_finetuning/: Model studing.ipynb  _test.ipynb  dictionary.ipynb
research/other_ai_research/keytokens/: BERTscore.ipynb  TestField.ipynb  feedbacks_keytokens.ipynb
research/stage_1_keywords_extraction/Keyphrase extraction/: BERTopic keyphrase extraction.ipynb
research/stage_1_keywords_extraction/Keyphrase extraction/.ipynb_checkpoints/: BERTopic keyphrase extraction-checkpoint.ipynb
research/stage_1_keywords_extraction/Keyphrase extraction/Keyphrase extraction graph methods separately/: Keyphrase extraction PositionRank.ipynb.ipynb  Keyphrase extraction TextRank.ipynb  Keyphrase extraction TopicRank.ipynb
research/stage_1_keywords_extraction/Keyphrase extraction/Keyphrase extraction graph methods separately/.ipynb_checkpoints/: Keyphrase extraction TextRank-checkpoint.ipynb
research/stage_1_keywords_extraction/Preprocessing/: preprocessing.ipynb
research/stage_2_keywords_search/search_annotated/: баллы.txt  задания задачи.txt  литература.txt  презентации.txt  тесты.txt  фильмы.txt  эссе.txt
scripts/: test_search.py  test_search_accuracy.py
stage_1_keywords_extraction/Keyphrase extraction/: Keyphrase extraction graph methods.ipynb
stage_1_keywords_extraction/Keyphrase extraction/.ipynb_checkpoints/: Keyphrase extraction graph methods-checkpoint.ipynb
stage_1_keywords_extraction/Keyphrase extraction/Keyphrase extraction graph methods separately/: Keyphrase extraction MultipartiteRank.ipynb  Keyphrase extraction SingleRank.ipynb
stage_2_keywords_search/search_annotated/: баллы.txt  видео-уроки.txt  выступления.txt  доклады.txt  домашняя работа.txt  задания задачи.txt  зачёт.txt  игры.txt  книги.txt  лекции.txt  литература.txt  материал информация.txt  мусор.txt  онлайн-курс.txt  подача материала.txt  практики семинары.txt  презентации.txt  преподаватель.txt  проекты.txt  работы.txt  темы.txt  теория.txt  тесты.txt  фильмы.txt  эссе.txt
web/: main.py
