[tool.poetry]
name = "keytokens-analysis"
version = "0.1.0"
description = ""
authors = ["daniil7 <daniil.k@mail.ru>", "bulatovv <albert.fz@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
transformers = "^4.35.2"
torch = "^2.1.1"
uvicorn = "^0.24.0.post1"
sentence-transformers = "^2.2.2"
nltk = "^3.8.1"
numpy = "^1.26.2"
pymorphy2 = "^0.9.1"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
