[tool.poetry]
name = "keytokens-analysis"
version = "0.1.0"
description = ""
authors = ["daniil7 <daniil.k@mail.ru>", "bulatovv <albert.fz@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
transformers = "^4.35.2"
uvicorn = "^0.24.0.post1"
sentence-transformers = "^2.2.2"
nltk = "^3.8.1"
numpy = "^1.26.2"
pymorphy2 = "^0.9.1"
torch = {version = "^2.1.1+cu118", source = "torch_cuda"}
natasha = "^1.6.0"

[[tool.poetry.source]]
name = "torch_cuda"
url = "https://download.pytorch.org/whl/cu118"
priority = "supplemental"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.2"
pke = {git = "https://github.com/boudinfl/pke.git"}
jupyter = "^1.0.0"
pandas = "^2.1.4"
tqdm = "^4.66.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
