[tool.poetry]
name = "keytokens-analysis"
version = "0.1.0"
description = ""
authors = ["daniil7 <daniil.k@mail.ru>", "bulatovv <albert.fz@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
pke = {git = "https://github.com/boudinfl/pke.git"}
jupyter = "^1.0.0"
pandas = "^2.1.4"
tqdm = "^4.66.1"


[[torch]]
version = "^2.1.1+cpu"
markers = "extra != 'cu121' and sys_platform == 'linux'"
url = "https://download.pytorch.org/whl/cpu/torch-1.11.0%2Bcpu-cp310-cp310-linux_x86_64.whl"

[[torch]]
version = "^2.1.1+cu121"
markers = "extra == 'cu121' and sys_platform == 'linux'"
url = "https://download.pytorch.org/whl/cu121/torch-2.1.0%2Bcu121-cp310-cp310-linux_x86_64.whl"
optional = true

[[torch]]
version = "^2.1.1+cpu"
markers = "extra != 'cu121' and sys_platform == 'win32'"
url = "https://download.pytorch.org/whl/cpu/torch-1.11.0%2Bcpu-cp310-cp310-win_amd64.whl"

[[torch]]
version = "^2.1.1+cu121"
markers = "extra == 'cu121' and sys_platform == 'win32'"
url = "https://download.pytorch.org/whl/cu121/torch-2.1.0%2Bcu121-cp310-cp310-win_amd64.whl"
optional = true

[tool.poetry.extras]
cu121 = ["torch"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
